--- a/Store/templates/navbars.html
+++ b/Store/templates/navbars.html
@@ -10,13 +10,13 @@
 		<li class="nav-item">
 		  <a class="nav-link" href="/add_items">post</a>
 		</li>
-		<ul class="navbar-nav">
+		<!-- <ul class="navbar-nav">
 			{% if request.user.is_authenticated %}
 			<li><a href="/accounts/logout"><button class="btn btn-danger">{{ user }} | Logout</button></a></li>
 			{% else %}
 			<li><a href="/accounts/login">Login</a></li>
 			{% endif %}
-		</ul>
+		</ul> -->
 	  </ul>
 	</div>
   </nav>
